feat : Add user activation feature
Changes
- Configured nodemailer and added mail sending logic in `utils/mail.ts`
- Added mail-related environment variables in `env.ts`
- Added registration success email template
- Added activation route in `routes/api.ts`
- Implemented `activation()` method in `auth.controller.ts`
- Implemented mail-sending logic in `user.model.ts`
- Updated API docs in `swagger.ts`
