# src/controllers/auth.controller.ts
@@ -120,7 +120,8 @@ const authController = {
                     {
                         username : identifier
                     },
-                ]
+                ],
+                isActive : true
             });
 
             
@@ -176,6 +177,40 @@ const authController = {
         }
 
 
+    },
+    async activation(req : Request, res : Response) { 
+        /**
+         #swagger.tags = ["Auth"]
+         #swagger.requestBody = {
+            required : true,
+            schema : {$ref : '#/components/schemas/ActivationRequest'}
+         }
+         */
+        try {
+            const { code } = req.body as { code : string }
+            const user = await UserModel.findOneAndUpdate({
+                    activationCode : code
+                },
+                {
+                    isActive : true
+                },
+                {
+                    new : true
+                }
+            )
+            res.status(200).json({
+                message : "User Activated Successfully",
+                data : {
+                    user
+                }
+            })
+
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+            });
+        }
     }
 
 
